<resources>
    <string name="app_name">Expense Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="trash">Trash</string>
    <string name="expression_cal">2 x 3=6</string>
    <string name="zero">0</string>
    <string name="result">Ans.</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="eqaul_sign">=</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="save">Save</string>
</resources>