<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_12">

    <EditText
        android:background="@drawable/input_back"
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Type"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:layout_marginTop="10sp"
        android:id="@+id/selection_type"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/expense"
            android:text="@string/expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/income"
            android:text="@string/income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:layout_marginTop="@dimen/size_24"
        android:id="@+id/save"
        android:textColor="@color/white_p"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selection_type"
        android:background="@drawable/primary_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        app:layout_constraintTop_toBottomOf="@id/save"
        android:layout_width="match_parent"
        android:layout_height="64sp"></View>



</androidx.constraintlayout.widget.ConstraintLayout>