<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_24"
    android:background="@color/white">

    <TextView
        android:id="@+id/expression"
        style="@style/CalcValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/expression_cal"
        app:layout_constraintEnd_toStartOf="@id/clear_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/result_view"
        style="@style/CalcValueStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression" />

    <ImageButton
        android:id="@+id/clear_back"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:scaleType="centerCrop"
        android:src="@drawable/menu_icon"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/number_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spacer" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/number_pad">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/FlatButton"
                android:textSize="@dimen/size_24"
                android:text="save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:textSize="@dimen/size_32"
                android:id="@+id/clear_all"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/FlatButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AC"
                app:layout_constraintEnd_toStartOf="@id/equate"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/equate"
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eqaul_sign"
                android:textSize="@dimen/size_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>